external-crates/move/crates/move-compiler/tests/move_2024/suggestions/suggestion_0.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E03006]: unexpected name in this position
  ┌─ tests/move_2024/suggestions/suggestion_0.move:3:25
  │
2 │     fun fool() { }
  │         ---- Similarly named defintion found here
3 │     public fun call() { gool() }
  │                         ^^^^
  │                         │
  │                         Could not resolve the name 'gool'
  │                         Did you mean: 'fool'
